Try sample command feature

--- a/manifest.json
+++ b/manifest.json
@@ -13,16 +13,15 @@
         "slash_commands": [
             {
                 "command": "/com-e2e",
-                "url": "https://31c8-115-78-238-177.ap.ngrok.io/slack/events",
-                "description": "test",
-                "usage_hint": "test",
+                "url": "https://bb31-115-78-238-177.ap.ngrok.io/slack/events",
+                "description": "com e2e reporter",
                 "should_escape": false
             }
         ]
     },
     "oauth_config": {
         "redirect_urls": [
-            "https://31c8-115-78-238-177.ap.ngrok.io/slack/oauth_redirect"
+            "https://bb31-115-78-238-177.ap.ngrok.io/slack/oauth_redirect"
         ],
         "scopes": {
             "bot": [
@@ -36,7 +35,7 @@
     "settings": {
         "interactivity": {
             "is_enabled": true,
-            "request_url": "https://42a7-115-78-238-177.ap.ngrok.io/slack/message_action"
+            "request_url": "https://bb31-115-78-238-177.ap.ngrok.io/slack/message_action"
         },
         "org_deploy_enabled": false,
         "socket_mode_enabled": false,
