--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@slack/bolt": "^3.12.2",
     "cron": "^2.2.0",
     "dotenv": "^16.0.3",
-    "excel-date-to-js": "^1.1.5"
+    "excel-date-to-js": "^1.1.5",
+    "node-fetch": "^2.3.0"
   }
 }
